kubernetes/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
spec:
  gatewayClassName: nginx
  listeners:     
    - name: https
      protocol: HTTPS
      hostname: "test.mytest.com"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: app-tls-secret
            kind: Secret
