kubernetes/gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webserver-httproute
  namespace: default
spec:
  parentRefs:
  - name: web-gateway
  hostnames:
  - "test.mytest.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /    
    backendRefs:
    - name: weather-forecast-service
      port: 8081

  - matches:
    - path:
        type: PathPrefix
        value: /mongo-express
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: mongo-express-service
      port: 8081
